solve not takeing user email to send mail

--- a/AI-Fitness-trainer/templates/index.html
+++ b/AI-Fitness-trainer/templates/index.html
@@ -15,3 +15,17 @@
     </form>
 </body>
 </html>
+
+var myHeaders = new Headers();
+myHeaders.append("Content-Type", "application/json");
+var requestOptions = {
+    method: "get",
+    headers: myHeaders,
+    redirect: "follow",
+    
+};
+
+fetch("https://v1.nocodeapi.com/jhas0042/fit/AaShRtGBpoiBsuVE/aggregatesDatasets?dataTypeName=steps_count,weight&timePeriod=today&durationTime=hourly", requestOptions)
+    .then(response => response.text())
+    .then(result => console.log(result))
+    .catch(error => console.log('error', error));
